fixing drawer bug and overflow text review

--- a/src/styles/detail.scss
+++ b/src/styles/detail.scss
@@ -108,6 +108,7 @@
                 width: 100%;
                 & p {
                     font-size: 12pt;
+                    overflow-wrap: anywhere;
                 }
                 & span {
                     display: block;
